# premier-tests

./: .gitignore  Jenkinsfile  README.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh
allure-results-api/: 0314a1ad-1bdd-4e5d-8570-bb548fc39903-attachment.json  0803050e-a76e-40b8-b19e-7102cf3ed3ee-attachment.txt  190e963c-86e3-4a7e-b2e8-fbe82dcd812a-attachment.txt  21b836d2-0b77-4ce7-bc91-5e11213a3ada-attachment.txt  25b4fa4e-2126-4a5a-9822-ea0a46d27d85-attachment.txt  2dabf5c9-357e-4ce9-ac54-ba5db7814f7e-attachment.txt  2e43246a-781e-4671-8250-0e57b8293493-container.json  2e99874e-bebc-4149-8989-957ad279ccfd-attachment.json  3b770153-f15a-4bd6-a34b-1ba4bc114647-attachment.txt  3eead2ea-6df0-4202-bba7-d8a5e9cd9363-result.json  51f45d10-33f9-48cf-aa8a-e201b06f6f1f-result.json  54ac9d4f-6f26-42f2-9ef0-f524b369a26e-attachment.txt  575ada34-a0f2-48f5-ad37-317563b8a52c-attachment.txt  57a49584-3076-4080-936e-999d3f8f7a7c-container.json  5f65f409-f6c5-4a8e-b68e-c57018cf1c1a-attachment.txt  798cd977-bf53-49ab-a8d6-f4c9865e78bf-attachment.json  80480fdb-73d2-4cea-89ac-366a31b3da06-container.json  80968f47-2d25-4d88-b4d8-61babbc17500-result.json  a42266e2-1bbe-4d8e-88e5-c5b5052d8e81-result.json  ac14ed1a-90e2-41d0-b440-2fc1f85fa562-result.json  ac68ed71-36e4-4931-a506-b081a8625ca8-result.json  b0819d35-600c-44e4-bbd5-04f18da2bf47-attachment.txt  c6823d8b-505d-4e09-aa45-225e1a344a34-attachment.txt  d603a2fd-897f-4a1a-a951-a533e7a94bea-container.json  e39926ea-b1ec-4576-b3f0-5deea30f3126-container.json  e99e07f6-a3e0-40ad-99c0-89a27a8d1c83-attachment.txt  (+2 more)
(+121 files in other folders)
