[project]
name = "premier-tests"
version = "0.1.0"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [".git", ".venv", "venv", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes (F401 unused imports, etc.)
    "I",   # isort
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["premier_tests", "reqres_tests", "scripts"]

[tool.ruff.format]
quote-style = "double"
